# robotframework-example

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml  rf.py
src/: __init__.py  testsuite.py
src/resources/: chrome.resource  google.resource  import.resource
src/tests/: test_1.robot  test_2.robot
